@@ -18,6 +18,5 @@
 
 options=false
 logdir=/tmp
-traceLevel=4
-traceComponents=ALL
+traceLevel=1
 port=5988
