@@ -17,6 +17,5 @@
  
 options=false
 logdir=/tmp
-traceLevel=4
-traceComponents=ALL
+traceLevel=1
 port=5988
